HelloUltraviolet/Fixtures/RejectedSource/Expressions/QualifiedNameEliminatedBeforeTyping/Expected.uv
//! Expected diagnostic metadata for the QualifiedNameEliminatedBeforeTyping rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "req.16.QualifiedNameEliminatedBeforeTyping")
